--- a/pages/posgrad/index.html
+++ b/pages/posgrad/index.html
@@ -101,7 +101,7 @@
     <section class="container my-3 mt-5" id="cursos">
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
         <!-- Card 1 -->
-        <a href="pages/agronegocio.html" target="_blank">
+        <a href="#" target="_blank">
           <div class="col">
             <div class="card position-relative text-center hover-zoom">
               <img
@@ -118,7 +118,7 @@
           </div>
         </a>
         <!-- Card 2 -->
-        <a href="pages/endodontia.html" target="_blank">
+        <a href="#" target="_blank">
           <div class="col">
             <div class="card position-relative text-center hover-zoom">
               <img
@@ -135,7 +135,7 @@
           </div>
         </a>
         <!-- Card 3 -->
-        <a href="pages/eng-estetica.html" target="_blank">
+        <a href="#" target="_blank">
           <div class="col">
             <div class="card position-relative text-center hover-zoom">
               <img
@@ -152,7 +152,7 @@
           </div>
         </a>
         <!-- Card 4 -->
-        <a href="pages/eng-manutencao.html" target="_blank">
+        <a href="#" target="_blank">
           <div class="col">
             <div class="card position-relative text-center hover-zoom">
               <img
@@ -174,7 +174,7 @@
     <section class="container my-3">
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
         <!-- Card 5 -->
-        <a href="pages/fisiologia.html" target="_blank">
+        <a href="#" target="_blank">
           <div class="col">
             <div class="card position-relative text-center hover-zoom">
               <img
@@ -191,7 +191,7 @@
           </div>
         </a>
         <!-- Card 6 -->
-        <a href="pages/gestao-estrategica.html" target="_blank">
+        <a href="#" target="_blank">
           <div class="col">
             <div class="card position-relative text-center hover-zoom">
               <img
@@ -210,7 +210,7 @@
           </div>
         </a>
         <!-- Card 7 -->
-        <a href="pages/inovacao-agro.html" target="_blank">
+        <a href="#" target="_blank">
           <div class="col">
             <div class="card position-relative text-center hover-zoom">
               <img
@@ -229,7 +229,7 @@
           </div>
         </a>
         <!-- Card 8 -->
-        <a href="pages/controladoria.html" target="_blank">
+        <a href="#" target="_blank">
           <div class="col">
             <div class="card position-relative text-center hover-zoom">
               <img
@@ -253,7 +253,7 @@
         class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 justify-content-center"
       >
         <!-- Card 9 -->
-        <a href="pages/mba-lid.html" target="_blank">
+        <a href="#" target="_blank">
           <div class="col">
             <div class="card position-relative text-center hover-zoom">
               <img
@@ -272,7 +272,7 @@
           </div>
         </a>
         <!-- Card 10 -->
-        <a href="pages/mbe-mercado.html" target="_blank">
+        <a href="#" target="_blank">
           <div class="col">
             <div class="card position-relative text-center hover-zoom">
               <img
@@ -291,7 +291,7 @@
           </div>
         </a>
         <!-- Card 11 -->
-        <a href="pages/odontopediatria.html" target="_blank">
+        <a href="#" target="_blank">
           <div class="col">
             <div class="card position-relative text-center hover-zoom">
               <img
@@ -315,7 +315,7 @@
         <div class="row">
           <a
             class="text-center"
-            href="http://inscricao.unifeb.edu.br/Login/114"
+            href="#"
             target="_blank"
             ><button class="btn btn-custom2">INSCREVA-SE</button></a
           >
@@ -382,20 +382,20 @@
             <!-- Ícones das redes sociais -->
             <div class="social-icons">
               <a
-                href="https://www.facebook.com/profile.php?id=100075768861746"
+                href="#"
                 class="mx-3"
                 ><img src="assets/2025/face.png" alt=""
               /></a>
               <a
-                href="https://api.whatsapp.com/send?phone=5517991718611"
+                href="#"
                 class="mx-3"
                 ><img src="assets/2025/zapzap.png" alt=""
               /></a>
-              <a href="https://www.instagram.com/pos.unifeb/" class="mx-3"
+              <a href="#" class="mx-3"
                 ><img src="assets/2025/insta.png" alt=""
               /></a>
               <a
-                href="https://www.linkedin.com/in/unifeb-p%C3%B3s-gradua%C3%A7%C3%A3o-412024220/"
+                href="#"
                 class="mx-3"
                 ><img src="assets/2025/linkedin.png" alt=""
               /></a>
@@ -416,22 +416,22 @@
             <h2>CONTATO</h2>
             <ul>
               <li>
-                <a href="https://api.whatsapp.com/send?phone=5517991718611"
+                <a href="#"
                   >WhatsApp</a
                 >
               </li>
               <li>
-                <a href="https://www.instagram.com/pos.unifeb/">Instagram</a>
+                <a href="#">Instagram</a>
               </li>
               <li>
                 <a
-                  href="https://www.facebook.com/profile.php?id=100075768861746"
+                  href="#"
                   >Facebook</a
                 >
               </li>
               <li>
                 <a
-                  href="https://www.linkedin.com/in/unifeb-p%C3%B3s-gradua%C3%A7%C3%A3o-412024220/"
+                  href="#"
                   >Linkedin</a
                 >
               </li>
