--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
 
     <!-- Ícones de redes sociais -->
     <div class="d-flex justify-content-center gap-3 mt-4">
-      <a href="https://www.instagram.com/joaocarvalho.dev?igsh=MTVya2dxem16N3Q2eA=="><i class="bi bi-instagram fs-3"></i></a>
+      <a href="mailto:joaocarvalhon2.2003@gmail.com"><i class="bi bi-instagram fs-3"></i></a>
       <!-- <a href="#"><i class="bi bi-whatsapp fs-3"></i></a> -->
-      <a href="mailto:joaocarvalhon2.2003@gmail.com"><i class="bi bi-envelope fs-3"></i></a>
+      <a href="https://www.instagram.com/joaocarvalho.dev?igsh=MTVya2dxem16N3Q2eA=="><i class="bi bi-envelope fs-3"></i></a>
     </div>
   </div>
 </section>
@@ -428,7 +428,7 @@
         return;
       }
 
-      const numero = "5517981005886"; // <-- Seu número com DDI + DDD
+      const numero = "5517981748394"; // <-- Seu número com DDI + DDD
       const texto = `Olá! Meu nome é ${nome}%0AMensagem: ${mensagem}`;
 
       const link = `https://wa.me/${numero}?text=${texto}`;
