--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
 
     <!-- Ícones de redes sociais -->
     <div class="d-flex justify-content-center gap-3 mt-4">
-      <a href="mailto:joaocarvalhon2.2003@gmail.com"><i class="bi bi-instagram fs-3"></i></a>
+      <a href="https://www.instagram.com/joaocarvalho.dev?igsh=MTVya2dxem16N3Q2eA=="><i class="bi bi-instagram fs-3"></i></a>
       <!-- <a href="#"><i class="bi bi-whatsapp fs-3"></i></a> -->
-      <a href="https://www.instagram.com/joaocarvalho.dev?igsh=MTVya2dxem16N3Q2eA=="><i class="bi bi-envelope fs-3"></i></a>
+      <a href="mailto:joaocarvalhon2.2003@gmail.com"><i class="bi bi-envelope fs-3"></i></a>
     </div>
   </div>
 </section>
@@ -318,8 +318,8 @@
         abaixo:.
       </p>
       <div>
-        <a href="https://github.com/j0aocarv"><i class="bi bi-linkedin fs-4 me-2"></i></a>
-        <a href="https://www.linkedin.com/in/joaomarcelocarvalho/"><i class="bi bi-github fs-4"></i></a>
+        <a href="https://www.linkedin.com/in/joaomarcelocarvalho/"><i class="bi bi-linkedin fs-4 me-2"></i></a>
+        <a href="https://github.com/j0aocarv"><i class="bi bi-github fs-4"></i></a>
       </div>
     </footer>
 
